--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>GitMaster</h1>
+    <img src="https://www.nobledesktop.com/image/gitresources/git-branches-merge.png">
 </body>
 </html>
